--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/SplashTheme">
-        <activity android:name=".MainActivity" android:theme="@style/AppTheme.Login"></activity>
+        <activity
+            android:name=".VincularProfesorACurso"
+            android:exported="true"></activity>
+        <activity
+            android:name=".VincularEstudianteACurso"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.Login" />
         <activity android:name=".ActivitySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
